# LLM_pick-and-place-small-blocks-using-yolo8-

./: BASE_POSITION_FIX.md  CAMERA_OFFSET_SUMMARY.md  CMakeLists.txt  DEMONSTRATION_TRAINING_README.md  INSTALL.md  INTEGRATED_SYSTEM_GUIDE.md  OBJECT_DETECTION_COMMANDS.txt  PICK_PLACE_GUIDE.txt  PLANNING_GUIDE.md  README.md  USAGE_README.md  calibrate_camera_position.md  calibration_verifier.py  camera_calibration_node.py  camera_publisher.py  cloud_llm_controller.py  controllers.yaml  dataset.yaml  dobot_can_interface.py  dobot_moveit_bridge.py  dobot_rl_env.py  dobot_serial_interface.py  fake_joint_publisher.py  frames_2025-11-03_23.25.09.gv  frames_2025-11-03_23.30.58.gv  frames_2025-11-05_10.19.24.gv  generate_box_training.py  get_tf.py  integrated_pick_place_system.py  joint_control.py  joint_state_initializer.py  labels.cache  moveit_interface_demo.py  moveit_params.yaml  moveit_planning_params.yaml  package.xml  robot_desc.yaml  send_command.py  simple_joint_controller.py  test_calibration.py  (+9 more)
dobot_fk_ik_tools/: CMakeLists.txt  package.xml
dobot_fk_ik_tools/dobot_fk_ik_tools/scripts/: fk_ik_sympy.py  fk_to_rviz.py  ik_to_rviz.py
dobot_fk_ik_tools/launch/: show_magician.launch.py  view_rviz.launch.py
dobot_llm_agent/: package.xml  setup.cfg  setup.py
dobot_rviz_demo/: dobot_joint_pub.py  joint_controller.py  launch_all.py  package.xml  requirements.txt  set_params.py  setup.py  setup_yolov9.sh  simple_launch.py  test_integration.py  test_rviz.py
dobot_rviz_demo/dobot_rviz_demo/: __init__.py
dobot_rviz_demo/dobot_rviz_demo/launch/: dobot_ign.launch.py  dobot_view.launch.py
dobot_rviz_demo/dobot_rviz_demo/launch/rviz_gazebo_control/: README.md  dobot.rviz  joint_state_to_commands.py  magician_lite_control.urdf  magician_lite_control.urdf.backup  rviz_gazebo_control.launch.py  rviz_gazebo_control.launch.py.backup
dobot_rviz_demo/dobot_rviz_demo/scripts/: camera_calibration.py  fk_ik_sympy.py  fk_to_rviz.py  ik_to_rviz.py  yolov9_dobot_controller.py
dobot_rviz_demo/launch/: gazebo_rviz_control.launch.py
launch/: README  complete_system.launch.py  demonstration_training.launch.py  display.launch.py  full_system.launch.py  integrated_system.launch.py  moveit_demo.launch.py
magician_moveit_config/: CMakeLists.txt  package.xml
meshes/: base_link.STL  elbow.STL  gripper.STL  shoulder.STL  wrist.STL  wrist_pitch.STL
(+17 files in other folders)
