<?xml version="1.0"?>
<package format="3">
  <name>dobot_fk_ik_tools</name>
  <version>0.0.1</version>
  <description>FK/IK publishers and RViz/GZ launchers for Dobot Magician (uses dobot_description)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>dobot_description</exec_depend>
</package>
